# production-navigator

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
docs/: 01_concept.md  02_architecture.md  03_company_profile.md  04_domain_model.md  06_classification_system.md  06_reference_data.md  07_business_rules.md  08_sqlalchemy_models.md  09_profile_onboarding.md  10_api_design.md  99_backlog.md
